--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akshaya G | Portfolio</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Akshaya G | Portfolio</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <style>
-        html { scroll-behavior: smooth; }
-    </style>
+<style>
+html { scroll-behavior: smooth; }
+</style>
 </head>
+
 <body>
 
 <!-- NAVBAR -->
@@ -30,21 +26,29 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<!-- HERO SECTION -->
+<!-- HERO -->
 <header id="home" class="header">
     <img src="profile.jpg" alt="Profile Photo" class="profile-img">
 
     <h1>Hello! I’m Akshaya G</h1>
     <p>B.Tech CSBS Student | Aspiring Data Analyst</p>
 
+    <!-- SOCIAL MEDIA -->
     <div class="social-icons">
-        <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">
+        <!-- LINKEDIN (EXACT LINK YOU GAVE) -->
+        <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+           target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#" target="_blank">
+
+        <!-- GITHUB -->
+        <a href="https://github.com/YOUR_GITHUB_USERNAME"
+           target="_blank" title="GitHub">
             <i class="fab fa-github"></i>
         </a>
-        <a href="mailto:akshayagopi0712@gmail.com">
+
+        <!-- EMAIL -->
+        <a href="mailto:akshayagopi0712@gmail.com" title="Email">
             <i class="fas fa-envelope"></i>
         </a>
     </div>
@@ -52,66 +56,35 @@
     <a href="#projects" class="btn">View Projects</a>
 </header>
 
-<!-- ABOUT SECTION -->
+<!-- ABOUT -->
 <section id="about" class="section">
     <h2>About Me</h2>
-
     <p>
-        I am a B.Tech Computer Science and Business Systems student at
-        Jerusalem College of Engineering. I am interested in programming,
-        database management, and data analysis.
+        I am a B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering.
+        I am interested in programming, data analysis, and business intelligence.
     </p>
-
-    <p><strong>Strengths:</strong> Quick learner, Team player, Consistent</p>
-    <p><strong>Career Goal:</strong> Data Analyst / Business Intelligence Role</p>
+    <p><strong>Strengths:</strong> Quick Learner, Team Player, Consistent</p>
+    <p><strong>Career Goal:</strong> Data Analyst / BI Analyst</p>
 </section>
 
-<!-- SKILLS SECTION -->
+<!-- SKILLS -->
 <section id="skills" class="section">
     <h2>Skills</h2>
 
     <div class="skills">
-
-        <div class="skill-category">
+        <div>
             <h3>Technical Skills</h3>
-
-            <div class="skill-bar">
-                <span>Python</span>
-                <div class="bar">
-                    <div class="progress" data-progress="90%"></div>
-                </div>
-            </div>
-
-            <div class="skill-bar">
-                <span>Java</span>
-                <div class="bar">
-                    <div class="progress" data-progress="80%"></div>
-                </div>
-            </div>
-
-            <div class="skill-bar">
-                <span>HTML & CSS</span>
-                <div class="bar">
-                    <div class="progress" data-progress="95%"></div>
-                </div>
-            </div>
-
-            <div class="skill-bar">
-                <span>MySQL</span>
-                <div class="bar">
-                    <div class="progress" data-progress="75%"></div>
-                </div>
-            </div>
-
-            <div class="skill-bar">
-                <span>Power BI & DAX</span>
-                <div class="bar">
-                    <div class="progress" data-progress="80%"></div>
-                </div>
-            </div>
+            <ul>
+                <li>C</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>HTML & CSS</li>
+                <li>MySQL</li>
+                <li>Power BI & DAX</li>
+            </ul>
         </div>
 
-        <div class="skill-category">
+        <div>
             <h3>Soft Skills</h3>
             <ul>
                 <li>Communication</li>
@@ -120,64 +93,53 @@
                 <li>Time Management</li>
             </ul>
         </div>
-
     </div>
 </section>
 
-<!-- PROJECTS SECTION -->
+<!-- PROJECTS -->
 <section id="projects" class="section">
     <h2>Projects</h2>
 
-    <div class="projects-grid">
+    <div class="project">
+        <h3>Exam Data Analysis</h3>
+        <p>Analyzed student exam data and visualized insights.</p>
+        <p><strong>Tools:</strong> Python, Pandas, Power BI</p>
+    </div>
 
-        <div class="project-card">
-            <h3>Exam Data Analysis</h3>
-            <p>Analyzed student exam data and visualized performance insights.</p>
-            <p><strong>Tools:</strong> Python, Pandas, Power BI</p>
-        </div>
+    <div class="project">
+        <h3>Portfolio Website</h3>
+        <p>Built a responsive personal portfolio.</p>
+        <p><strong>Tools:</strong> HTML, CSS, JavaScript</p>
+    </div>
 
-        <div class="project-card">
-            <h3>Portfolio Website</h3>
-            <p>Designed a responsive personal portfolio website.</p>
-            <p><strong>Tools:</strong> HTML, CSS, JavaScript</p>
-        </div>
-
-        <div class="project-card">
-            <h3>Database Mini Project</h3>
-            <p>Designed and queried a relational database.</p>
-            <p><strong>Tools:</strong> MySQL</p>
-        </div>
-
+    <div class="project">
+        <h3>Database Mini Project</h3>
+        <p>Designed and queried a relational database.</p>
+        <p><strong>Tools:</strong> MySQL</p>
     </div>
 </section>
 
-<!-- RESUME SECTION -->
+<!-- RESUME -->
 <section id="resume" class="section">
     <h2>Resume</h2>
-    <a href="resume.pdf" class="btn resume-btn" target="_blank">
-        Download Resume
-    </a>
+    <a href="resume.pdf" target="_blank" class="btn resume-btn">Download Resume</a>
 </section>
 
-<!-- CONTACT SECTION -->
+<!-- CONTACT -->
 <section id="contact" class="section">
     <h2>Contact</h2>
     <p>Email: akshayagopi0712@gmail.com</p>
     <p>LinkedIn: Akshaya G</p>
 </section>
 
-<!-- BACK TO TOP BUTTON -->
 <button id="backToTop">
     <i class="fas fa-arrow-up"></i>
 </button>
 
-<!-- FOOTER -->
 <footer>
     <p>© 2025 Akshaya G</p>
 </footer>
 
-<!-- JS -->
 <script src="script.js"></script>
-
 </body>
 </html>
