--- a/index.html
+++ b/index.html
@@ -5,64 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akshaya G | Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
 <header>
-    <h1>Akshaya G</h1>
-    <p>B.Tech Computer Science and Business Systems</p>
-    <p>Jerusalem College of Engineering</p>
-    <p class="interest">Interested in Programming, Data & Business Technology</p>
+    <div class="profile-container">
+        <img src="profile.jpg" alt="Akshaya G" class="profile-pic">
+        <h1>Akshaya G</h1>
+        <p>B.Tech Computer Science and Business Systems</p>
+        <p>Jerusalem College of Engineering</p>
+        <p class="interest">Interested in Programming, Data & Business Technology</p>
+    </div>
 </header>
+
+<section>
+    <h2>Objective</h2>
+    <p>
+        To create a professional portfolio that highlights my academic learning,
+        technical skills, and course-related projects in Computer Science and
+        Business Systems, helping me track my growth and prepare for internships
+        and future career opportunities.
+    </p>
+</section>
 
 <section>
     <h2>About Me</h2>
     <p>
         I am a Computer Science and Business Systems student with a strong interest in
-        programming, problem solving, and data handling. I enjoy learning new technologies
-        and improving both my technical and communication skills.
+        programming, problem solving, and data handling. I enjoy learning new
+        technologies and improving both my technical and communication skills.
     </p>
     <p>
-        <strong>Strengths:</strong> Quick learner, self-motivated, teamwork  
-        <br>
-        <strong>Hobbies:</strong> Exploring tech tools, designing simple websites, self-learning
+        <strong>Strengths:</strong> Quick learner, self-motivated, teamwork <br>
+        <strong>Hobbies:</strong> Exploring tech tools, designing websites, self-learning
     </p>
 </section>
 
 <section>
     <h2>Skills</h2>
-    <ul>
-        <li><strong>Technical Skills:</strong> C, Java, Python, HTML, CSS, SQL, Pandas (Basics)</li>
-        <li><strong>Soft Skills:</strong> Communication, Teamwork, Time Management, Presentation</li>
-    </ul>
+    <div class="skills">
+        <div class="skill"><i class="fa-brands fa-c"></i> C</div>
+        <div class="skill"><i class="fa-brands fa-java"></i> Java</div>
+        <div class="skill"><i class="fa-brands fa-python"></i> Python</div>
+        <div class="skill"><i class="fa-brands fa-html5"></i> HTML</div>
+        <div class="skill"><i class="fa-brands fa-css3-alt"></i> CSS</div>
+        <div class="skill"><i class="fa-solid fa-database"></i> SQL</div>
+        <div class="skill soft">Communication</div>
+        <div class="skill soft">Teamwork</div>
+        <div class="skill soft">Time Management</div>
+    </div>
 </section>
 
 <section>
     <h2>Projects</h2>
-
-    <div class="project">
-        <h3>Student Portfolio Website</h3>
-        <p>Designed a personal portfolio website to showcase skills and academic details.</p>
-        <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
-    </div>
-
-    <div class="project">
-        <h3>Basic Data Analysis using Python</h3>
-        <p>Performed basic data analysis and visualization using Pandas in Jupyter Notebook.</p>
-        <p><strong>Tools:</strong> Python, Pandas, Jupyter</p>
-    </div>
-
-    <div class="project">
-        <h3>Database Queries Project</h3>
-        <p>Practiced SQL queries for managing and retrieving structured data.</p>
-        <p><strong>Tools:</strong> MySQL, Workbench</p>
-    </div>
+    <p>
+        <a href="projects.html" class="btn">View My Projects</a>
+    </p>
 </section>
 
 <section>
     <h2>Resume</h2>
     <p>
-        <a href="#" class="btn">Upload / View Resume (PDF)</a>
+        <a href="Akshaya_Resume.pdf" target="_blank" class="btn">
+            View / Download Resume
+        </a>
     </p>
 </section>
 
@@ -85,6 +92,45 @@
 
 <footer>
     <p>© 2025 Akshaya G | CSBS Portfolio</p>
+</footer>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects | Akshaya G</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+    <h1>My Projects</h1>
+    <p>Academic & Practice Projects</p>
+</header>
+
+<section>
+    <h2>Student Portfolio Website</h2>
+    <p>Designed a responsive portfolio website to showcase skills and resume.</p>
+    <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
+</section>
+
+<section>
+    <h2>Basic Data Analysis using Python</h2>
+    <p>Performed basic data analysis and visualization using Pandas.</p>
+    <p><strong>Tools:</strong> Python, Pandas, Jupyter Notebook</p>
+</section>
+
+<section>
+    <h2>SQL Database Practice</h2>
+    <p>Practiced SQL queries for managing and retrieving structured data.</p>
+    <p><strong>Tools:</strong> MySQL, Workbench</p>
+</section>
+
+<footer>
+    <p><a href="index.html">⬅ Back to Home</a></p>
 </footer>
 
 </body>
