--- a/index.html
+++ b/index.html
@@ -4,8 +4,167 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akshaya G | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <!-- INTERNAL CSS (All styles inside HTML) -->
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Segoe UI", sans-serif;
+        }
+
+        body {
+            background-color: #0f0f14;
+            color: #eaeaea;
+            line-height: 1.6;
+        }
+
+        /* Header */
+        header {
+            background: linear-gradient(135deg, #ff2f92, #8b1c4a);
+            padding: 40px 15px;
+            text-align: center;
+        }
+
+        .profile-container {
+            max-width: 420px;
+            margin: auto;
+        }
+
+        .profile-pic {
+            width: 130px;
+            height: 130px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #ff77bd;
+            margin-bottom: 15px;
+            box-shadow: 0 0 25px rgba(255, 77, 166, 0.8);
+            animation: glow 2.5s infinite alternate;
+        }
+
+        @keyframes glow {
+            from { box-shadow: 0 0 15px rgba(255, 77, 166, 0.4); }
+            to { box-shadow: 0 0 30px rgba(255, 77, 166, 1); }
+        }
+
+        header h1 {
+            font-size: 2.2rem;
+            color: white;
+        }
+
+        header p {
+            margin-top: 5px;
+            color: #ffe3f0;
+        }
+
+        .interest {
+            font-style: italic;
+            margin-top: 10px;
+        }
+
+        /* Sections */
+        section {
+            background: #1a1a24;
+            margin: 18px;
+            padding: 22px;
+            border-radius: 14px;
+            box-shadow: 0 6px 20px rgba(255, 47, 146, 0.15);
+            opacity: 0;
+            transform: translateY(40px);
+            animation: fadeUp 1s ease forwards;
+        }
+
+        @keyframes fadeUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        h2 {
+            color: #ff4da6;
+            margin-bottom: 12px;
+        }
+
+        /* Skills */
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+        }
+
+        .skill {
+            background: #2a2a3d;
+            padding: 10px 16px;
+            border-radius: 25px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            color: #ff77bd;
+            transition: 0.3s;
+        }
+
+        .skill.soft {
+            color: #ffd1e8;
+        }
+
+        .skill:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 18px rgba(255, 77, 166, 0.6);
+        }
+
+        /* Projects */
+        .project {
+            background: #222232;
+            padding: 15px;
+            border-radius: 12px;
+            margin-bottom: 15px;
+            transition: 0.3s;
+        }
+
+        .project:hover {
+            box-shadow: 0 0 18px rgba(255, 77, 166, 0.5);
+            transform: translateY(-5px);
+        }
+
+        /* Links & Button */
+        a {
+            color: #ff77bd;
+            text-decoration: none;
+        }
+
+        .btn {
+            display: inline-block;
+            background-color: #ff2f92;
+            color: white;
+            padding: 9px 18px;
+            border-radius: 25px;
+            margin-top: 10px;
+        }
+
+        .btn:hover {
+            background-color: #ff4da6;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 15px;
+            font-size: 0.9rem;
+            color: #aaa;
+        }
+
+        /* Mobile */
+        @media (max-width: 600px) {
+            header h1 { font-size: 1.8rem; }
+            .profile-pic { width: 110px; height: 110px; }
+            section { margin: 12px; }
+        }
+    </style>
 </head>
 <body>
 
@@ -33,12 +192,11 @@
     <h2>About Me</h2>
     <p>
         I am a Computer Science and Business Systems student with a strong interest in
-        programming, problem solving, and data handling. I enjoy learning new
-        technologies and improving both my technical and communication skills.
+        programming, data handling, and problem solving.
     </p>
     <p>
-        <strong>Strengths:</strong> Quick learner, self-motivated, teamwork <br>
-        <strong>Hobbies:</strong> Exploring tech tools, designing websites, self-learning
+        <strong>Strengths:</strong> Quick learner, self-motivated, teamwork<br>
+        <strong>Hobbies:</strong> Learning new technologies, designing websites
     </p>
 </section>
 
@@ -59,18 +217,29 @@
 
 <section>
     <h2>Projects</h2>
-    <p>
-        <a href="projects.html" class="btn">View My Projects</a>
-    </p>
+
+    <div class="project">
+        <h3>Student Portfolio Website</h3>
+        <p>Designed a responsive portfolio to showcase skills and resume.</p>
+        <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
+    </div>
+
+    <div class="project">
+        <h3>Basic Data Analysis using Python</h3>
+        <p>Performed data analysis and visualization using Pandas.</p>
+        <p><strong>Tools:</strong> Python, Pandas, Jupyter</p>
+    </div>
+
+    <div class="project">
+        <h3>SQL Database Practice</h3>
+        <p>Practiced SQL queries for structured data handling.</p>
+        <p><strong>Tools:</strong> MySQL, Workbench</p>
+    </div>
 </section>
 
 <section>
     <h2>Resume</h2>
-    <p>
-        <a href="Akshaya_Resume.pdf" target="_blank" class="btn">
-            View / Download Resume
-        </a>
-    </p>
+    <a href="Akshaya_Resume.pdf" target="_blank" class="btn">View / Download Resume</a>
 </section>
 
 <section>
@@ -78,9 +247,7 @@
     <p><strong>Email:</strong> akshayagopi0712@gmail.com</p>
     <p>
         <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">
-            View Profile
-        </a>
+        <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">View Profile</a>
     </p>
     <p>
         <strong>GitHub:</strong>
@@ -92,45 +259,6 @@
 
 <footer>
     <p>© 2025 Akshaya G | CSBS Portfolio</p>
-</footer>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | Akshaya G</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header>
-    <h1>My Projects</h1>
-    <p>Academic & Practice Projects</p>
-</header>
-
-<section>
-    <h2>Student Portfolio Website</h2>
-    <p>Designed a responsive portfolio website to showcase skills and resume.</p>
-    <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
-</section>
-
-<section>
-    <h2>Basic Data Analysis using Python</h2>
-    <p>Performed basic data analysis and visualization using Pandas.</p>
-    <p><strong>Tools:</strong> Python, Pandas, Jupyter Notebook</p>
-</section>
-
-<section>
-    <h2>SQL Database Practice</h2>
-    <p>Practiced SQL queries for managing and retrieving structured data.</p>
-    <p><strong>Tools:</strong> MySQL, Workbench</p>
-</section>
-
-<footer>
-    <p><a href="index.html">⬅ Back to Home</a></p>
 </footer>
 
 </body>
